--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -326,6 +326,10 @@
       h3 {
         margin-bottom: 12px;
       }
+
+      img {
+        margin-bottom: 34px;
+      }
     }
   }
 
